[project]
name = "avg-utility"
version = "0.2.3"
description = "Shared pricing, yield, and on-chain position utilities for AVG projects"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "web3>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["avg_utility*"]

[tool.setuptools.package-data]
avg_utility = ["abi/*.json"]
